# booktracker-cli

./: .gitignore  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_BRIEF.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: ADL.md  AI_COLLABORATION.md  TUTORIAL.md
src/booktracker/: __init__.py  cli.py  models.py  store.py
tests/: test_cli.py  test_models.py
