[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booktracker-cli"
version = "1.0.0"
description = "A command-line personal reading list manager"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Waqar Javed", email = "waqar@example.com" }]
keywords = ["cli", "books", "reading", "tracker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
dependencies = []          # stdlib only — zero external runtime deps

[project.scripts]
booktracker = "booktracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
